--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
+FLASK_ENV=production
+FLASK_DEBUG=False
+SECRET_KEY=your_strong_secret_key_here
 MAIL_USERNAME=afnanimrwt@gmail.com
-MAIL_PASSWORD=xxxx-xxxx-xxxx-xxxx
-SECRET_KEY=your_secret_key_here
-
+MAIL_PASSWORD=your_gmail_app_password
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
+ADMIN_USER=admin
+ADMIN_PASSWORD=your_strong_admin_password
