--- a/render.yaml
+++ b/render.yaml
@@ -2,23 +2,28 @@ services:
   - type: web
     name: zeeshan-portfolio
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.0
-      - key: DATABASE_URL
-        fromDatabase:
-          name: portfolio-db
-          property: connectionString
-      - key: MAIL_USERNAME
-        sync: false
-      - key: MAIL_PASSWORD
-        sync: false
+      - key: FLASK_ENV
+        value: production
+      - key: FLASK_DEBUG
+        value: "False"
       - key: SECRET_KEY
-        generateValue: true
-
-databases:
-  - name: portfolio-db
-    databaseName: portfolio
-    user: portfolio
+        value: your_strong_secret_key_here
+      - key: MAIL_USERNAME
+        value: afnanimrwt@gmail.com
+      - key: MAIL_PASSWORD
+        value: your_gmail_app_password
+      - key: MAIL_SERVER
+        value: smtp.gmail.com
+      - key: MAIL_PORT
+        value: "587"
+      - key: MAIL_USE_TLS
+        value: "True"
+      - key: MAIL_USE_SSL
+        value: "False"
+      - key: ADMIN_USER
+        value: admin
+      - key: ADMIN_PASSWORD
+        value: your_strong_admin_password
